2013-10-24  David Edelsohn  <dje.gcc@gmail.com>

	Backport from mainline
	2013-10-23  David Edelsohn  <dje.gcc@gmail.com>

	PR target/58838
	* config/rs6000/rs6000.md (mulsi3_internal1 and splitter): Add
	TARGET_32BIT final condition.
	(mulsi3_internal2 and splitter): Same.

2013-10-23  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/58805
	* tree-ssa-tail-merge.c (stmt_local_def): Add gimple_vdef check.

2013-10-23  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2013-06-24  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/57488
	* tree-ssa-pre.c (insert): Clear NEW sets before each iteration.

2013-10-16  Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

        Backport from mainline
        2013-10-16  Ganesh Gopalasubramanian
                    <Ganesh.Gopalasubramanian@amd.com>

        * config/i386/i386.c (ix86_option_override_internal): Enable FMA4
        for AMD bdver3.

2013-10-16  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 4.8.3.
	* DEV-PHASE: Set to prerelease.

2013-10-16  Release Manager

	* GCC 4.8.2 released.

2013-10-12  James Greenhalgh  <james.greenhalgh@arm.com>

	Backport from mainline.
	2013-10-12  James Greenhalgh  <james.greenhalgh@arm.com>

	* config/aarch64/arm_neon.h
	(vtbx<1,3>_<psu>8): Fix register constriants.

2013-10-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/58670
	* stmt.c (expand_asm_operands): Add FALLTHRU_BB argument,
	if any labels are in FALLTHRU_BB, use a special label emitted
	immediately after the asm goto insn rather than label_rtx
	of the LABEL_DECL.
	(expand_asm_stmt): Adjust caller.
	* cfgrtl.c (commit_one_edge_insertion): Force splitting of
	edge if the last insn in predecessor is a jump with single successor,
	but it isn't simplejump_p.

2013-10-09  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2013-09-26  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/58539
	* tree-vect-loop.c (vect_create_epilog_for_reduction): Honor