@@ -1,3 +1,9 @@
+2013-10-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* recog.c (search_ofs): New static variable moved from...
+	(peep2_find_free_register): ...here.
+	(peephole2_optimize): Initialize it.
+
 2013-10-24  David Edelsohn  <dje.gcc@gmail.com>
 
 	Backport from mainline
